Fix template align

--- a/art17/static/css/art17-ui.css
+++ b/art17/static/css/art17-ui.css
@@ -1733,7 +1733,3 @@ td input {
 tbody th {
   text-align: center !important;
 }
-
-.outer-wrapper .container {
-  margin-left: unset;
-}
